Quality of life changes
* Remove dead code
* Fix missing arguments in logging statements
* Unwrap object arrays in logging statements
* Other minor api changes